--- a/templates/fb_pages/check.html.twig
+++ b/templates/fb_pages/check.html.twig
@@ -1,12 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-<h1>{{ name }}</h1>
+{% block title %}Page: {{ name }}{% endblock %}
 
-<h2>Posts ({{ posts | length }})</h2>
-<ul>
-    {% for post in posts  %}
-        <li>{{ post }}</li>
-    {% endfor %}
-</ul>
+{% block body %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="show-article-container p-3 mt-4">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="show-article-title-container d-inline-block align-middle">
+                                <span class="show-article-title ">{{ name }}</span>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-2">
+                            Commenter name <i class="fas fa fa-angle-up"></i>
+                        </div>
+                    </div>
+                    {% for post in posts %}
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="comment-container d-inline-block pl-3 align-top">
+                                    <span class="commenter-name">Mike Ferengi</span>
+                                </div>
+                            </div>
+                            <div class="col-md-6 comment">
+                                {{ post }}
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        <div id="jsGrid"></div>
+    </div>
 {% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src = "{{ asset('js/check.js') }}">
+{% endblock %}
+
